<resources>
    <string name="app_name">PCOV</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Philadelphia Church Of Vancouver</string>
    <string name="nav_header_subtitle">Vision of 2019: A Church that glorifies the Lord by spreading the Gospel and worshiping him. </string>
    <string name="nav_header_contentDescription">Philadelphia Church of Vancouver Logo</string>
    <string name="nav_select_sermons">Sermon Videos</string>
    <string name="nav_select_announcements">Philly News</string>
    <string name="nav_select_gallery">Gallery</string>
    <string name="nav_select_information">About Philly Church</string>

    <!-- Information Fragment Strings -->
    <string name="about_us">About Us</string>
    <string name="for_newcomers">For Newcomers</string>
    <string name="worship_services">Worship Services</string>
    <string name="church_history">Church History</string>
    <string name="visit_us">Visit Us</string>
    <string name="who_made_this_app">Who Made this App?</string>

    <string name="churchphoto">churchPhoto</string>

    <string name="title_activity_video_viewer">VideoViewer</string>
    <string name="title_activity_credits">Credits</string>

    <string name="firebase_notification_description">Notifications description (Change later)</string>

    <string name="galleryNotificationTitle">Download Complete</string>
    <string name="galleryNotificationContext">The image has been downloaded to your device!</string>
    <string name="errorWhileBringingImage">There was an error while bringing the image</string>

    <!-- Credits Strings -->
    <string name="credits">The Philadelphia Church of Vancouver Application</string>
    <string name="all_credits">Development Team:\n\nEthan Kim\nRex Liu\n\n\nThose who serve the Ministry:\n\nSung Duck Chun\nSung Hoon Kim\nHeesung Park\nSam Kim\nSunhwa Gea\nTony Dohoon Lee\nSeong Jin Lee\n\n\nSpecial Thanks:\n\nKin Lo</string>
    
    <string name="no_connection_video">Please connect to the internet to view Sermon Videos.</string>
    <string name="no_connection_gallery">No internet connection. Will not sync for new Images.</string>
    <string name="no_connection_announcements">No internet connection. Will not sync for new Announcements.</string>

    <string name="storage_permission_toast">Please allow app permissions for Storage</string>
    <string name="sharing_error_toast">Error while Sharing</string>
    <string name="image_downloaded_toast">Image Downloaded</string>
    <string name="error_toast">Error. Please Try Again</string>

    <string name="storage_permission_dialog_message">To download images, you need to allow this app to access the device\'s storage. Press \"allow\" in the permission request.</string>
    <string name="storage_permission_dialog_title">Need Storage Permissions</string>
    <string name="okay">Okay</string>

    <string name="googleplayservices_dialog_message">App cannot function without google play services.</string>
    <string name="googleplayservices_permission_dialog_title">Need Google Play Services</string>
    <string name="exitapp">Exit App</string>





</resources>
