<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_select_sermons" />
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_announcement"
            android:title="@string/nav_select_announcements" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_select_gallery"  />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_select_information" />
    </group>

</menu>
